feat: move FILTER_TAGS and IGNORED_ITEMS to config file; update PVE/PVP API routes to use shared config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,12 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/config/*": ["config/*"],
+      "@/types/*": ["types/*"],
+      "@/components/*": ["components/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
