feat: implement rate limiting for PVE and PVP API routes; increase cache duration to 5 minutes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/config/*": ["config/*"],
       "@/types/*": ["types/*"],
       "@/components/*": ["components/*"],
+      "@/lib/*": ["lib/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
