--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,15 @@ yarn-error.log*
 # local env files
 .env*.local
 
+# env files
+.env*
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local files
+/public/all_items_*
