--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^1.0.1",
     "framer-motion": "^11.11.1",
     "fuse.js": "^7.0.0",
     "js-cookie": "^3.0.5",
@@ -48,6 +49,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
