feature: tarkov-dev API & cache changes

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "supabase": "^1.192.5",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
