--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -33,13 +33,14 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.0.4",
     "cookie": "^1.0.1",
+    "fflate": "^0.8.2",
     "framer-motion": "^11.11.1",
     "fuse.js": "^7.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
-    "next": "14.2.11",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
