--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/supabase-js": "^2.45.4",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.3.1",
     "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.0",
@@ -47,7 +48,6 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
-    "supabase": "^1.192.5",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
