--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "fuse.js": "^7.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
-    "next": "^14.2.23",
+    "next": "^15.1.7",
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
@@ -63,6 +63,7 @@
     "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
+    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
