--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/compression": "^1.7.5",
     "@vercel/analytics": "^1.3.1",
     "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "compression": "^1.8.0",
     "cookie": "^1.0.1",
     "fflate": "^0.8.2",
     "framer-motion": "^11.11.1",
