--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "next": "^15.1.7",
+    "posthog-js": "^1.237.0",
+    "posthog-node": "^4.15.0",
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
