--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
     "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.9.0-beta"
   }
 }
