--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "posthog-js": "^1.237.0",
     "posthog-node": "^4.15.0",
     "react": "^18",
@@ -55,6 +56,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.11",
+    "sonner": "^2.0.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
