--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/cookie": "^0.6.0",
+    "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.10",
     "@types/react": "^18",
