--- a/package.json
+++ b/package.json
@@ -11,31 +11,37 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.9",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.8",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@types/compression": "^1.7.5",
     "@vercel/analytics": "^1.3.1",
+    "ai": "^5.0.9",
     "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -43,10 +49,13 @@
     "cmdk": "^1.0.4",
     "compression": "^1.8.0",
     "cookie": "^1.0.1",
+    "embla-carousel-react": "^8.6.0",
     "fflate": "^0.8.2",
     "framer-motion": "^11.18.2",
     "fuse.js": "^7.0.0",
+    "harden-react-markdown": "^1.0.4",
     "js-cookie": "^3.0.5",
+    "katex": "^0.16.22",
     "lucide-react": "^0.441.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
@@ -56,12 +65,19 @@
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.11",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.1.1",
+    "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -74,6 +90,7 @@
     "@types/node": "^20.19.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
