feat: add changelog page and centralize release notes
- Introduce /updates route with styled changelog
- Add config/changelog.ts to track versions, highlights & known issues
- Update version-info, feedback-form, and app shell to reference new changelog

[v2.1.1]

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "changelog:preview": "node scripts/extract-notes.js --print",
+    "changelog:write": "node scripts/extract-notes.js --write",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
