--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "changelog:preview": "node scripts/extract-notes.js --print",
     "changelog:write": "node scripts/extract-notes.js --write",
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "bun run --bun next dev",
+    "build": "bun run --bun next build",
+    "start": "bun run --bun next start",
     "lint": "next lint",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -59,7 +59,7 @@
     "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.441.0",
-    "next": "^15.5.7",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.237.0",
     "posthog-node": "^4.15.0",
@@ -95,7 +95,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-window": "^1.8.8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11",
+    "eslint-config-next": "16.0.10",
     "eslint-config-prettier": "^10.0.1",
     "jsdom": "^26.1.0",
     "postcss": "^8",
