fix(api): bypass Vercel proxy for Tarkov data
[v2.1.2]

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SUPABASE_ANON_KEY=""
 USE_LOCAL_DATA=true
 #node environment
 NODE_ENV=""
+#optional overrides for the Tarkov GraphQL endpoint
+NEXT_PUBLIC_TARKOV_GRAPHQL_URL="https://api.tarkov.dev/graphql"
+TARKOV_GRAPHQL_URL="https://api.tarkov.dev/graphql"
