--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.441.0",
-    "next": "^16.0.10",
+    "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
@@ -93,7 +93,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-window": "^1.8.8",
     "eslint": "^9.39.2",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "^15.1.0",
     "eslint-config-prettier": "^10.0.1",
     "jsdom": "^26.1.0",
     "postcss": "^8",
