--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "bun run --bun next start",
     "lint": "eslint . --max-warnings=0",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "add-recipe": "bun tools/add-recipe.ts"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.9",
