--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "framer-motion": "^11.18.2",
     "fuse.js": "^7.1.0",
     "harden-react-markdown": "^1.0.4",
+    "json5": "^2.2.3",
     "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.441.0",
@@ -96,6 +97,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^15.1.0",
     "eslint-config-prettier": "^10.0.1",
+    "json5-loader": "^4.0.0",
     "jsdom": "^26.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
